--- a/gallery.html
+++ b/gallery.html
@@ -844,7 +844,7 @@
                     </div>
                 </div>
 
-                <!-- Sports Category -->
+                <!-- Sports Category - UPDATED WITH YOUR IMAGES -->
                 <div class="category-card glass-effect">
                     <div class="category-header">
                         <div class="category-icon">⚽</div>
@@ -852,22 +852,34 @@
                     </div>
                     <div class="slideshow-container">
                         <div class="slideshow" id="sports-slideshow">
-                            <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+                            <div class="slide active" style="background-image: url('https://i.postimg.cc/N5htgpLJ/football-team-jpg.jpg');">
                                 <div class="slide-content">
-                                    <h4 class="slide-title">Football Team</h4>
-                                    <p class="slide-description">Our championship-winning football team</p>
+                                    <h4 class="slide-title">Football Team Training</h4>
+                                    <p class="slide-description">Our dedicated football team practicing skills</p>
                                 </div>
                             </div>
-                            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1546519638-68e109498ffc?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/hfFnSph3/football-team2-jpg.jpg');">
                                 <div class="slide-content">
-                                    <h4 class="slide-title">Basketball Practice</h4>
-                                    <p class="slide-description">Developing skills and teamwork</p>
+                                    <h4 class="slide-title">Team Building</h4>
+                                    <p class="slide-description">Building teamwork and sportsmanship</p>
                                 </div>
                             </div>
-                            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1461896836934-ffe607ba8211?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/rK6T8Qzr/football-team3-jpg.jpg');">
                                 <div class="slide-content">
-                                    <h4 class="slide-title">Sports Day</h4>
-                                    <p class="slide-description">Annual inter-house competitions</p>
+                                    <h4 class="slide-title">Football Practice Session</h4>
+                                    <p class="slide-description">Developing athletic skills and coordination</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/Yhc7pbjf/football-team4-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Young Athletes</h4>
+                                    <p class="slide-description">Nurturing future sports champions</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/0zPqSjYR/sports-day-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Annual Sports Day</h4>
+                                    <p class="slide-description">Celebrating athletic achievements and school spirit</p>
                                 </div>
                             </div>
                         </div>
@@ -878,6 +890,8 @@
                         <span class="nav-dot active" onclick="goToSlide('sports', 0)"></span>
                         <span class="nav-dot" onclick="goToSlide('sports', 1)"></span>
                         <span class="nav-dot" onclick="goToSlide('sports', 2)"></span>
+                        <span class="nav-dot" onclick="goToSlide('sports', 3)"></span>
+                        <span class="nav-dot" onclick="goToSlide('sports', 4)"></span>
                     </div>
                 </div>
             </div>
