--- a/gallery.html
+++ b/gallery.html
@@ -684,7 +684,7 @@
     <section class="gallery">
         <div class="container">
             <div class="gallery-categories">
-                <!-- Education Category -->
+                <!-- Education Category - UPDATED WITH YOUR GRADUATION IMAGES -->
                 <div class="category-card glass-effect">
                     <div class="category-header">
                         <div class="category-icon">📚</div>
@@ -692,22 +692,34 @@
                     </div>
                     <div class="slideshow-container">
                         <div class="slideshow" id="education-slideshow">
-                            <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1497636577773-f1231844b336?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
-                                <div class="slide-content">
-                                    <h4 class="slide-title">Classroom Learning</h4>
-                                    <p class="slide-description">Students engaged in interactive classroom activities</p>
-                                </div>
-                            </div>
-                            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
-                                <div class="slide-content">
-                                    <h4 class="slide-title">Science Laboratory</h4>
-                                    <p class="slide-description">Hands-on experiments in our modern science lab</p>
-                                </div>
-                            </div>
-                            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+                            <div class="slide active" style="background-image: url('https://i.postimg.cc/67GvwsFV/graduation-jpg.jpg');">
                                 <div class="slide-content">
                                     <h4 class="slide-title">Graduation Ceremony</h4>
-                                    <p class="slide-description">Celebrating academic achievements</p>
+                                    <p class="slide-description">Celebrating academic achievements and success</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/68PvD6bH/graduation2-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Graduation Honors</h4>
+                                    <p class="slide-description">Recognizing outstanding student accomplishments</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/cvznV1kF/graduation3-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Academic Excellence</h4>
+                                    <p class="slide-description">Proud graduates receiving their diplomas</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/0z4wL5X0/graduation4-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Graduation Celebration</h4>
+                                    <p class="slide-description">Joyful moments of academic completion</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/mPnH0Zpj/graduation5-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Future Leaders</h4>
+                                    <p class="slide-description">Our graduates ready to make a difference</p>
                                 </div>
                             </div>
                         </div>
@@ -718,6 +730,8 @@
                         <span class="nav-dot active" onclick="goToSlide('education', 0)"></span>
                         <span class="nav-dot" onclick="goToSlide('education', 1)"></span>
                         <span class="nav-dot" onclick="goToSlide('education', 2)"></span>
+                        <span class="nav-dot" onclick="goToSlide('education', 3)"></span>
+                        <span class="nav-dot" onclick="goToSlide('education', 4)"></span>
                     </div>
                 </div>
 
