--- a/about.html
+++ b/about.html
@@ -739,19 +739,19 @@
                 <div class="staff-member">
                     <div class="staff-img">👩‍🏫</div>
                     <h4>Ms. Suzie Sam Odoom</h4>
-                    <div class="staff-role">Head of Academics</div>
+                    <div class="staff-role">Counselor</div>
                     <p>Title</p>
                 </div>
                 <div class="staff-member">
                     <div class="staff-img">👨‍🏫</div>
                     <h4>Mr. Anthony Dancan</h4>
-                    <div class="staff-role">Student Affairs</div>
+                    <div class="staff-role">Supervisor</div>
                     <p>Title</p>
                 </div>
                 <div class="staff-member">
                     <div class="staff-img">👩‍🏫</div>
                     <h4>Ms. Linda Essien</h4>
-                    <div class="staff-role">Spiritual Development</div>
+                    <div class="staff-role">Headmistress</div>
                     <p>Title</p>
                 </div>
             </div>
