--- a/contact.html
+++ b/contact.html
@@ -878,21 +878,21 @@
                 <div class="staff-member">
                     <div class="staff-img">👩‍🏫</div>
                     <h4>Ms. Suzie Sam Odoom</h4>
-                    <div class="staff-role">Head of Academics</div>
+                    <div class="staff-role">Counselor</div>
                     <p class="staff-contact">Email: suzieodoom@gmail.com</p>
                     <p class="staff-contact">Tell: +233 20 604 1650</p>
                 </div>
                 <div class="staff-member">
                     <div class="staff-img">👨‍🏫</div>
                     <h4>Mr. Anthony Dancan</h4>
-                    <div class="staff-role">Admissions Director</div>
-                    <p class="staff-contact">Email: a.dancan@essienacademy.edu.gh</p>
+                    <div class="staff-role">Supervisor</div>
+                    <p class="staff-contact">Email: quaicoeduncan1@gmail.com</p>
                     <p class="staff-contact">Tell: +233 24 260 1747</p>
                 </div>
                 <div class="staff-member">
                     <div class="staff-img">👩‍🏫</div>
                     <h4>Ms. Linda Essien</h4>
-                    <div class="staff-role">Student Affairs</div>
+                    <div class="staff-role">Headmistress</div>
                     <p class="staff-contact">Email: l.essien@essienacademy.edu.gh</p>
                     <p class="staff-contact">Tell: +233 54 154 4050</p>
                 </div>
